@@ -316,6 +316,16 @@ INSERT INTO typetest1 (id, c, nc, vc, nvc, lc, r, u, lb, lr, b, num, fl, db, d, 
    '23:59:59.999999',
    '3 years'
 );
+-- try inserting an empty string into a CLOB (will become NULL)
+BEGIN;
+INSERT INTO typetest1 (id, lc) VALUES (5, '');
+SELECT lc IS NULL FROM typetest1 WHERE id = 5;
+ ?column? 
+----------
+ t
+(1 row)
+
+ROLLBACK;
 /*
  * Test SELECT, UPDATE ... RETURNING, DELETE and transactions.
  */
